Oh is didn't know there were so many different types of inputs :D

--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -92,7 +92,7 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="color-primary">Email</label>
-              <input id="email" type="input" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <input id="email" type="email" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="color-primary">Password</label>
@@ -108,7 +108,7 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="color-primary">Email</label>
-              <input id="email" type="input" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <input id="email" type="email" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="color-primary">Password</label>
@@ -124,7 +124,7 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="color-primary">Email</label>
-              <input id="email" type="input" class="border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <input id="email" type="email" class="border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="color-primary">Password</label>
@@ -139,11 +139,11 @@
           <form class="border-4">
             <div class="login-title">Welcome</div>
             <div class="form-line">
-              <label for="email" class="input4">Email</label>
-              <input id="email" type="input" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <label for="email" class="color-primary">Email</label>
+              <input id="email" type="email" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
-              <label for="password" class="input4">Password</label>
+              <label for="password" class="color-primary">Password</label>
               <input id="password" type="password" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
