Radio button WIP

--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -173,6 +173,33 @@
           <label for="check-box7" class="color-primary">Checkbox 4 Disabled</label>
         </element>
       </showcase>
+      <h1>Radio buttons</h1>
+      <showcase>
+        <element>
+          <input id="radio-style2-1" name="radio-style2" type="radio" class="text-1-1 border-2 border-2-hover color-secondary color-primary-hover b2-text-shadow width-1-2 height-1-2 inline-block">
+          <label for="radio-style2-1" class="color-primary">Radio 1</label>
+          <input id="radio-style2-2" name="radio-style2" type="radio" class="text-1-1 border-2 border-2-hover color-secondary color-primary-hover b2-text-shadow width-1-2 height-1-2 inline-block">
+          <label for="radio-style2-2" class="color-primary">Radio 2</label>
+          <input id="radio-style2-disabled" name="radio-style2-disabled" type="radio" class="text-1-1 border-2-disabled color-disabled-primary b2-text-shadow width-1-2 height-1-2" disabled>
+          <label for="radio-style2-disabled" class="color-primary">Radio 3 Disabled</label>
+        </element>
+        <element>
+          <input id="radio-style3-1" name="radio-style3" type="radio" class="text-1-1 border-3 border-3-hover color-secondary color-primary-hover width-1-2 height-1-2">
+          <label for="radio-style3-1" class="color-primary">Radio 1</label>
+          <input id="radio-style3-2" name="radio-style3" type="radio" class="text-1-1 border-3 border-3-hover color-secondary color-primary-hover width-1-2 height-1-2">
+          <label for="radio-style3-2" class="color-primary">Radio 2</label>
+          <input id="radio-style3-disabled" name="radio-style3-disabled" type="radio" class="text-1-1 border-3-disabled color-disabled-primary width-1-2 height-1-2" disabled>
+          <label for="radio-style3-disabled" class="color-primary">Radio 3 Disabled</label>
+        </element>
+        <element>
+          <input id="radio-style4-1" name="radio-style4" type="radio" class="text-1-1 border-4 border-4-hover color-secondary color-primary-hover width-1-2 height-1-2">
+          <label for="radio-style4-1" class="color-primary">Radio 1</label>
+          <input id="radio-style4-2" name="radio-style4" type="radio" class="text-1-1 border-4 color-disabled-primary width-1-2 height-1-2">
+          <label for="radio-style4-2" class="color-primary">Radio 2</label>
+          <input id="radio-style4-disabled" name="radio-style4-disabled" type="radio" class="text-1-1 border-4-disabled color-disabled-primary width-1-2 height-1-2" disabled>
+          <label for="radio-style4-disabled" class="color-primary">Radio 3 Disabled</label>
+        </element>
+      </showcase>
     </show>
   </body>
 </html>
