Making radio buttons somewhat work...
HTML and CSS are garbage... Making something that doesn't go wrong just
because it can is really hard.

--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -155,7 +155,7 @@
       <h1>Check boxes</h1>
       <showcase>
         <element>
-          <input id="check-box2" type="checkbox" class="text-1-1 border-2 border-2-hover color-secondary color-primary-hover b2-text-shadow width-1-2 height-1-2 inline-block">
+          <input id="check-box2" type="checkbox" class="text-1-1 border-2 border-2-hover color-secondary color-primary-hover b2-text-shadow width-1-2 height-1-2 inline-block position-relative">
           <label for="check-box2" class="color-primary">Checkbox 2</label>
           <input id="check-box3" type="checkbox" class="text-1-1 border-2-disabled color-disabled-primary b2-text-shadow width-1-2 height-1-2" disabled>
           <label for="check-box3" class="color-primary">Checkbox 2 Disabled</label>
@@ -198,7 +198,7 @@
           <label for="radio-style4-2" class="color-primary">Radio 2</label>
           <input id="radio-style4-disabled" name="radio-style4-disabled" type="radio" class="text-1-1 border-4-disabled color-disabled-primary width-1-2 height-1-2" disabled>
           <label for="radio-style4-disabled" class="color-primary">Radio 3 Disabled</label>
-        </element>
+          </element>
       </showcase>
     </show>
   </body>
