Make use of more rem for control elements
Make use of more rem for control elements since it doesn't make so many
rendering artifacts.

--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -12,23 +12,23 @@
   </head>
   <body>
     <show>
-      <h1>buttons</h1>
+      <h1>Buttons</h1>
       <showcase>
         <element>
           <button class="border-1 border-1-hover text-1-1 padding-lr-1 color-secondary color-primary-hover bg-primary" type="button">Button 1</button> 
           <button class="border-1-disabled text-1-1 padding-lr-1 color-inverted-primary" type="button" disabled>Button 1</button>
         </element>
         <element>
-          <button class="border-2 border-2-hover text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover b2-text-shadow" type="button">Button 2</button>
-          <button class="border-2-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 2</button>
+          <button class="border-2 border-2-hover text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover text-shadow-2rpx" type="button">Button 2</button>
+          <button class="border-2-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary text-shadow-2rpx" type="button" disabled>Button 2</button>
         </element>
         <element>
           <button class="border-3 border-3-hover text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Button 3</button>
-          <button class="border-3-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 3</button>
+          <button class="border-3-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary text-shadow-2rpx" type="button" disabled>Button 3</button>
         </element>
         <element>
           <button class="border-4 border-4-hover text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Button 4</button>
-          <button class="border-4-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 4</button>
+          <button class="border-4-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary text-shadow-2rpx" type="button" disabled>Button 4</button>
         </element>
       </showcase>
       <h1>Inputs</h1>
@@ -92,14 +92,14 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="color-primary">Email</label>
-              <input id="email" type="email" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <input id="email" type="email" class="border-2 border-2-focus text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="color-primary">Password</label>
-              <input id="password" type="password" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="password" required="">
+              <input id="password" type="password" class="border-2 border-2-focus text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover b2-text-shadow" type="button">Login</button>
+              <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover text-shadow-2rpx" type="button">Login</button>
             </div>
           </form>
         </element>
@@ -108,14 +108,14 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="color-primary">Email</label>
-              <input id="email" type="email" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <input id="email" type="email" class="border-2 border-2-focus  text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="color-primary">Password</label>
-              <input id="password" type="password" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="password" required="">
+              <input id="password" type="password" class="border-2 border-2-focus  text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover b2-text-shadow" type="button">Login</button>
+              <button class="border-2 border-2-hover  text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover text-shadow-2rpx" type="button">Login</button>
             </div>
           </form>
         </element>
@@ -124,14 +124,14 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="color-primary">Email</label>
-              <input id="email" type="email" class="border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <input id="email" type="email" class="border-3 border-3-focus  text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="color-primary">Password</label>
-              <input id="password" type="password" class="border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="password" required="">
+              <input id="password" type="password" class="border-3 border-3-focus  text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="border-3 border-3-hover border-3-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
+              <button class="border-3 border-3-hover  text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
             </div>
           </form>
         </element>
@@ -140,14 +140,14 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="color-primary">Email</label>
-              <input id="email" type="email" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <input id="email" type="email" class="border-4 border-4-focus  text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="color-primary">Password</label>
-              <input id="password" type="password" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="password" required="">
+              <input id="password" type="password" class="border-4 border-4-focus  text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="b4 border-4 border-4-hover border-4-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
+              <button class="b4 border-4 border-4-hover  text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
             </div>
           </form>
         </element>
@@ -155,49 +155,49 @@
       <h1>Check boxes</h1>
       <showcase>
         <element>
-          <input id="check-box2" type="checkbox" class="text-1-1 border-2 border-2-hover color-secondary color-primary-hover b2-text-shadow width-1-2 height-1-2 inline-block position-relative">
-          <label for="check-box2" class="color-primary">Checkbox 2</label>
-          <input id="check-box3" type="checkbox" class="text-1-1 border-2-disabled color-disabled-primary b2-text-shadow width-1-2 height-1-2" disabled>
-          <label for="check-box3" class="color-primary">Checkbox 2 Disabled</label>
+          <input id="check-box2" type="checkbox" class="text-1-3 border-2 border-2-hover color-primary text-shadow-2rpx  inline-block position-relative align-middle size-1-5rem checkmark-after">
+          <label for="check-box2" class="color-primary align-middle">Checkbox 2</label>
+          <input id="check-box3" type="checkbox" class="text-1-3 border-2-disabled color-disabled-primary text-shadow-2rpx  align-middle size-1-5rem checkmark-after" disabled>
+          <label for="check-box3" class="color-primary align-middle">Checkbox 2 Disabled</label>
         </element>
         <element>
-          <input id="check-box4" type="checkbox" class="text-1-1 border-3 border-3-hover color-secondary color-primary-hover width-1-2 height-1-2">
-          <label for="check-box4" class="color-primary">Checkbox 3</label>
-          <input id="check-box5" type="checkbox" class="text-1-1 border-3-disabled color-disabled-primary width-1-2 height-1-2" disabled>
-          <label for="check-box5" class="color-primary">Checkbox 3 Disabled</label>
+          <input id="check-box4" type="checkbox" class="text-1-3 border-3 border-3-hover color-primary  align-middle size-1-5rem checkmark-after">
+          <label for="check-box4" class="color-primary align-middle">Checkbox 3</label>
+          <input id="check-box5" type="checkbox" class="text-1-3 border-3-disabled color-disabled-primary  align-middle size-1-5rem checkmark-after" disabled>
+          <label for="check-box5" class="color-primary align-middle">Checkbox 3 Disabled</label>
         </element>
         <element>
-          <input id="check-box6" type="checkbox" class="text-1-1 border-4 border-4-hover color-secondary color-primary-hover width-1-2 height-1-2">
-          <label for="check-box6" class="color-primary">Checkbox 4</label>
-          <input id="check-box7" type="checkbox" class="text-1-1 border-4-disabled color-disabled-primary width-1-2 height-1-2" disabled>
-          <label for="check-box7" class="color-primary">Checkbox 4 Disabled</label>
+          <input id="check-box6" type="checkbox" class="text-1-3 border-4 border-4-hover color-primary  align-middle size-1-5rem checkmark-after">
+          <label for="check-box6" class="color-primary align-middle">Checkbox 4</label>
+          <input id="check-box7" type="checkbox" class="text-1-3 border-4-disabled color-disabled-primary  align-middle size-1-5rem checkmark-after" disabled>
+          <label for="check-box7" class="color-primary align-middle">Checkbox 4 Disabled</label>
         </element>
       </showcase>
       <h1>Radio buttons</h1>
       <showcase>
         <element>
-          <input id="radio-style2-1" name="radio-style2" type="radio" class="text-1-1 border-2 border-2-hover color-secondary color-primary-hover b2-text-shadow width-1-2 height-1-2 inline-block">
-          <label for="radio-style2-1" class="color-primary">Radio 1</label>
-          <input id="radio-style2-2" name="radio-style2" type="radio" class="text-1-1 border-2 border-2-hover color-secondary color-primary-hover b2-text-shadow width-1-2 height-1-2 inline-block">
-          <label for="radio-style2-2" class="color-primary">Radio 2</label>
-          <input id="radio-style2-disabled" name="radio-style2-disabled" type="radio" class="text-1-1 border-2-disabled color-disabled-primary b2-text-shadow width-1-2 height-1-2" disabled>
-          <label for="radio-style2-disabled" class="color-primary">Radio 3 Disabled</label>
+          <input id="radio-style2-1" name="radio-style2" type="radio" class="text-1-5 border-2 border-2-hover color-primary text-shadow-2rpx inline-block align-middle size-1-5rem radiomark-after border-radius-50">
+          <label for="radio-style2-1" class="color-primary align-middle">Radio 1</label>
+          <input id="radio-style2-2" name="radio-style2" type="radio" class="text-1-5 border-2 border-2-hover color-primary text-shadow-2rpx inline-block align-middle size-1-5rem radiomark-after border-radius-50">
+          <label for="radio-style2-2" class="color-primary align-middle">Radio 2</label>
+          <input id="radio-style2-disabled" name="radio-style2-disabled" type="radio" class="text-1-5 border-2-disabled color-disabled-primary text-shadow-2rpx align-middle size-1-5rem radiomark-after border-radius-50" disabled>
+          <label for="radio-style2-disabled" class="color-primary align-middle">Radio 3 Disabled</label>
         </element>
         <element>
-          <input id="radio-style3-1" name="radio-style3" type="radio" class="text-1-1 border-3 border-3-hover color-secondary color-primary-hover width-1-2 height-1-2">
-          <label for="radio-style3-1" class="color-primary">Radio 1</label>
-          <input id="radio-style3-2" name="radio-style3" type="radio" class="text-1-1 border-3 border-3-hover color-secondary color-primary-hover width-1-2 height-1-2">
-          <label for="radio-style3-2" class="color-primary">Radio 2</label>
-          <input id="radio-style3-disabled" name="radio-style3-disabled" type="radio" class="text-1-1 border-3-disabled color-disabled-primary width-1-2 height-1-2" disabled>
-          <label for="radio-style3-disabled" class="color-primary">Radio 3 Disabled</label>
+          <input id="radio-style3-1" name="radio-style3" type="radio" class="text-1-1 border-3 border-3-hover color-primary size-1-5rem border-radius-50 align-middle radiomark-after">
+          <label for="radio-style3-1" class="color-primary align-middle">Radio 1</label>
+          <input id="radio-style3-2" name="radio-style3" type="radio" class="text-1-1 border-3 border-3-hover color-primary size-1-5rem border-radius-50 align-middle radiomark-after">
+          <label for="radio-style3-2" class="color-primary align-middle">Radio 2</label>
+          <input id="radio-style3-disabled" name="radio-style3-disabled" type="radio" class="text-1-1 border-3-disabled color-disabled-primary size-1-5rem border-radius-50 align-middle radiomark-after" disabled>
+          <label for="radio-style3-disabled" class="color-primary align-middle">Radio 3 Disabled</label>
         </element>
         <element>
-          <input id="radio-style4-1" name="radio-style4" type="radio" class="text-1-1 border-4 border-4-hover color-secondary color-primary-hover width-1-2 height-1-2">
-          <label for="radio-style4-1" class="color-primary">Radio 1</label>
-          <input id="radio-style4-2" name="radio-style4" type="radio" class="text-1-1 border-4 color-disabled-primary width-1-2 height-1-2">
-          <label for="radio-style4-2" class="color-primary">Radio 2</label>
-          <input id="radio-style4-disabled" name="radio-style4-disabled" type="radio" class="text-1-1 border-4-disabled color-disabled-primary width-1-2 height-1-2" disabled>
-          <label for="radio-style4-disabled" class="color-primary">Radio 3 Disabled</label>
+          <input id="radio-style4-1" name="radio-style4" type="radio" class="text-1-1 border-4 border-4-hover color-primary align-middle size-1-5rem border-radius-50 align-middle radiomark-after">
+          <label for="radio-style4-1" class="color-primary align-middle">Radio 1</label>
+          <input id="radio-style4-2" name="radio-style4" type="radio" class="text-1-1 border-4 color-primary align-middle size-1-5rem border-radius-50 align-middle radiomark-after">
+          <label for="radio-style4-2" class="color-primary align-middle">Radio 2</label>
+          <input id="radio-style4-disabled" name="radio-style4-disabled" type="radio" class="text-1-1 border-4-disabled color-disabled-primary align-middle size-1-5rem border-radius-50 align-middle radiomark-after" disabled>
+          <label for="radio-style4-disabled" class="color-primary align-middle">Radio 3 Disabled</label>
           </element>
       </showcase>
     </show>
