--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -5,89 +5,86 @@
     <title>
       kwa kwa
     </title>
-    <link rel="stylesheet" href="style.css">
-    <link href="css/fontawesome.css" rel="stylesheet">
-    <link href="css/brands.css" rel="stylesheet">
-    <link href="css/solid.css" rel="stylesheet">
+    <link rel="stylesheet" href="public/styles.css">
   </head>
   <body>
-    <show>
+    <div class="show">
       <h1>Buttons</h1>
-      <showcase>
-        <element>
+      <div class="showcase">
+        <div class="element">
           <button class="border-1 border-1-hover text-1-1 padding-lr-1 color-secondary color-primary-hover bg-primary" type="button">Button 1</button> 
           <button class="border-1-disabled text-1-1 padding-lr-1 color-inverted-primary" type="button" disabled>Button 1</button>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <button class="border-2 border-2-hover text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover text-shadow-2rpx" type="button">Button 2</button>
           <button class="border-2-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary text-shadow-2rpx" type="button" disabled>Button 2</button>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <button class="border-3 border-3-hover text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Button 3</button>
           <button class="border-3-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary text-shadow-2rpx" type="button" disabled>Button 3</button>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <button class="border-4 border-4-hover text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Button 4</button>
           <button class="border-4-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary text-shadow-2rpx" type="button" disabled>Button 4</button>
-        </element>
-      </showcase>
+        </div>
+      </div>
       <h1>Inputs</h1>
-      <showcase>
-        <element>
+      <div class="showcase">
+        <div class="element">
           <label for="input2" class="color-primary">Input 2 </label>
           <input id="input2" type="input" class="border-2 border-2-focus text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input2" required="">
           <label for="input3" class="color-primary">Input 2 Disabled</label>
           <input id="input3" type="input" class="border-2-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input2" required="" disabled>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <label for="input4" class="color-primary">Input 3 </label>
           <input id="input4" type="input" class="border-3 border-3-focus text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input3" required="">
           <label for="input5" class="color-primary">Input 3 Disabled</label>
           <input id="input5" type="input" class="input3 border-3-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input3" required="" disabled>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <label for="input6" class="color-primary">Input 4 </label>
           <input id="input6" type="input" class="border-4 border-4-focus text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input4" required="">
           <label for="input7" class="color-primary">Input 4 Disabled</label>
           <input id="input7" type="input" class="border-4-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input4" required="" disabled>
-        </element>
-      </showcase>
+        </div>
+      </div>
       <h1>Floating Label Inputs</h1>
-      <showcase>
-        <element>
-          <border class="float-input2 border-2">
+      <div class="showcase">
+        <div class="element">
+          <div class="border float-input2 border-2">
             <label for="float-input2" class="float-input2">Floating Label Input 2 asdfasdfaf</label>
             <input id="float-input2" type="input" class="float-input2" placeholder="float-input2" required="">
-          </border>
-        </element>
-        <element>
-          <border class="float-input3">
+          </div>
+        </div>
+        <div class="element">
+          <div class="border float-input3">
             <label for="float-input3" class="float-input3">Floating Label Input 3 asdfasdfaf</label>
             <input id="float-input3" type="input" class="float-input3" placeholder="float-input3" required="">
-          </border>
-        </element>
-        <element>
-          <border class="float-input4">
+          </div>
+        </div>
+        <div class="element">
+          <div class="border float-input4">
             <label for="float-input4" class="float-input4">Floating Label Input 4 asdfasdfaf</label>
             <input id="float-input4" type="input" class="float-input4" placeholder="float-input4" required="">
-          </border>
-        </element>
-        <element>
-          <border class="float-input5">
+          </div>
+        </div>
+        <div class="element">
+          <div class="border float-input5">
             <label for="float-input5" class="float-input5">Floating Label Input 5 asdfasdfaf</label>
             <input id="float-input5" type="input" class="float-input5" placeholder="float-input5" required="">
-          </border>
-        </element>
-        <element>
-          <border class="float-input6">
+          </div>
+        </div>
+        <div class="element">
+          <div class="border float-input6">
             <label for="float-input6" class="float-input6">Floating Label Input 6 asdfasdfaf</label>
             <input id="float-input6" type="input" class="float-input6" placeholder="float-input6" required="">
-          </border>
-        </element>
-      </showcase>
+          </div>
+        </div>
+      </div>
       <h1>Login form</h1>
-      <showcase>
-        <element>
+      <div class="showcase">
+        <div class="element">
           <form class="login-form1">
             <div class="login-title">Welcome</div>
             <div class="form-line">
@@ -102,8 +99,8 @@
               <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover text-shadow-2rpx" type="button">Login</button>
             </div>
           </form>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <form class="border-2">
             <div class="login-title">Welcome</div>
             <div class="form-line">
@@ -118,8 +115,8 @@
               <button class="border-2 border-2-hover  text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover text-shadow-2rpx" type="button">Login</button>
             </div>
           </form>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <form class="border-3">
             <div class="login-title">Welcome</div>
             <div class="form-line">
@@ -134,8 +131,8 @@
               <button class="border-3 border-3-hover  text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
             </div>
           </form>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <form class="border-4">
             <div class="login-title">Welcome</div>
             <div class="form-line">
@@ -150,56 +147,56 @@
               <button class="b4 border-4 border-4-hover  text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
             </div>
           </form>
-        </element>
-      </showcase>
+        </div>
+      </div>
       <h1>Check boxes</h1>
-      <showcase>
-        <element>
+      <div class="showcase">
+        <div class="element">
           <input id="check-box2" type="checkbox" class="text-1-3 border-2 border-2-hover color-primary text-shadow-2rpx  inline-block position-relative align-middle size-1-5rem checkmark-after">
           <label for="check-box2" class="color-primary align-middle">Checkbox 2</label>
           <input id="check-box3" type="checkbox" class="text-1-3 border-2-disabled color-disabled-primary text-shadow-2rpx  align-middle size-1-5rem checkmark-after" disabled>
           <label for="check-box3" class="color-primary align-middle">Checkbox 2 Disabled</label>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <input id="check-box4" type="checkbox" class="text-1-3 border-3 border-3-hover color-primary  align-middle size-1-5rem checkmark-after">
           <label for="check-box4" class="color-primary align-middle">Checkbox 3</label>
           <input id="check-box5" type="checkbox" class="text-1-3 border-3-disabled color-disabled-primary  align-middle size-1-5rem checkmark-after" disabled>
           <label for="check-box5" class="color-primary align-middle">Checkbox 3 Disabled</label>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <input id="check-box6" type="checkbox" class="text-1-3 border-4 border-4-hover color-primary  align-middle size-1-5rem checkmark-after">
           <label for="check-box6" class="color-primary align-middle">Checkbox 4</label>
           <input id="check-box7" type="checkbox" class="text-1-3 border-4-disabled color-disabled-primary  align-middle size-1-5rem checkmark-after" disabled>
           <label for="check-box7" class="color-primary align-middle">Checkbox 4 Disabled</label>
-        </element>
-      </showcase>
+        </div>
+      </div>
       <h1>Radio buttons</h1>
-      <showcase>
-        <element>
+      <div class="showcase">
+        <div class="element">
           <input id="radio-style2-1" name="radio-style2" type="radio" class="text-1-5 border-2 border-2-hover color-primary text-shadow-2rpx inline-block align-middle size-1-5rem radiomark-after border-radius-50">
           <label for="radio-style2-1" class="color-primary align-middle">Radio 1</label>
           <input id="radio-style2-2" name="radio-style2" type="radio" class="text-1-5 border-2 border-2-hover color-primary text-shadow-2rpx inline-block align-middle size-1-5rem radiomark-after border-radius-50">
           <label for="radio-style2-2" class="color-primary align-middle">Radio 2</label>
           <input id="radio-style2-disabled" name="radio-style2-disabled" type="radio" class="text-1-5 border-2-disabled color-disabled-primary text-shadow-2rpx align-middle size-1-5rem radiomark-after border-radius-50" disabled>
           <label for="radio-style2-disabled" class="color-primary align-middle">Radio 3 Disabled</label>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <input id="radio-style3-1" name="radio-style3" type="radio" class="text-1-1 border-3 border-3-hover color-primary size-1-5rem border-radius-50 align-middle radiomark-after">
           <label for="radio-style3-1" class="color-primary align-middle">Radio 1</label>
           <input id="radio-style3-2" name="radio-style3" type="radio" class="text-1-1 border-3 border-3-hover color-primary size-1-5rem border-radius-50 align-middle radiomark-after">
           <label for="radio-style3-2" class="color-primary align-middle">Radio 2</label>
           <input id="radio-style3-disabled" name="radio-style3-disabled" type="radio" class="text-1-1 border-3-disabled color-disabled-primary size-1-5rem border-radius-50 align-middle radiomark-after" disabled>
           <label for="radio-style3-disabled" class="color-primary align-middle">Radio 3 Disabled</label>
-        </element>
-        <element>
+        </div>
+        <div class="element">
           <input id="radio-style4-1" name="radio-style4" type="radio" class="text-1-1 border-4 border-4-hover color-primary align-middle size-1-5rem border-radius-50 align-middle radiomark-after">
           <label for="radio-style4-1" class="color-primary align-middle">Radio 1</label>
           <input id="radio-style4-2" name="radio-style4" type="radio" class="text-1-1 border-4 color-primary align-middle size-1-5rem border-radius-50 align-middle radiomark-after">
           <label for="radio-style4-2" class="color-primary align-middle">Radio 2</label>
           <input id="radio-style4-disabled" name="radio-style4-disabled" type="radio" class="text-1-1 border-4-disabled color-disabled-primary align-middle size-1-5rem border-radius-50 align-middle radiomark-after" disabled>
           <label for="radio-style4-disabled" class="color-primary align-middle">Radio 3 Disabled</label>
-          </element>
-      </showcase>
-    </show>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
