--- a/html-themes/index.html
+++ b/html-themes/index.html
@@ -4,7 +4,8 @@
 <head>
   <!-- Add a plain CSS file: see https://trunkrs.dev/assets/#css -->
   <!-- If using Tailwind with Leptos CSR, see https://trunkrs.dev/assets/#tailwind instead-->
-  <link data-trunk rel="css" href="public/styles.css" />
+  <link data-trunk rel="css" href="style/tailwind-out.css" />
+  <link data-trunk rel="css" href="style/styles.css" />
   <meta charset="UTF-8">
 
   <!-- include support for `wasm-bindgen --weak-refs` - see: https://rustwasm.github.io/docs/wasm-bindgen/reference/weak-references.html -->
